[package]
name = "wcpopup_win_hook"
version = "0.1.0"
edition = "2021"
description = "Hook DLL for wcpopup"
license = "MIT"
repository = "https://github.com/mrdkprj/wcpopup_win_hook"
build="build.rs"
links = "wcpopuphook"
include = [
    "/out"
]

[lib]
name = "wcpopup_win_hook"
path = "src/lib.rs"
# lib is required to set env
crate-type = ["cdylib","lib"]

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc"
]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.60"
features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
